VSE meta strips do not copy animation over to another scene #98168

Closed
opened 2022-05-16 17:10:56 +02:00 by Haig Petrus · 18 comments

System Information
Operating system: Linux-5.17.7-arch1-1-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.43.04

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-11 16:03, hash: 502e1a44b9
Worked: (newest version of Blender that worked as expected)

Short description of error
VSE strip animation do not copy over to another scene when pasted. They do copy when pasting in the same scene they were copied from.

Exact steps for others to reproduce the error

  • Bring in a movie/audio/scene strip onto the VSE timeline
  • Add some fade animation to it
  • make meta strip
  • Copy this strip
  • Create a new scene
  • Paste the strip in the new scene's timeline

Everything will paste, but animation will not be present. Values of previously animated attributes will most likely be that of the first keyframe.

Test File with first two steps included:
#98168.blend

**System Information** Operating system: Linux-5.17.7-arch1-1-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.43.04 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-11 16:03, hash: `502e1a44b9` Worked: (newest version of Blender that worked as expected) **Short description of error** VSE strip animation do not copy over to another scene when pasted. They do copy when pasting in the same scene they were copied from. **Exact steps for others to reproduce the error** - Bring in a movie/audio/scene strip onto the VSE timeline - Add some fade animation to it - make meta strip - Copy this strip - Create a new scene - Paste the strip in the new scene's timeline Everything will paste, but animation will not be present. Values of previously animated attributes will most likely be that of the first keyframe. Test File with first two steps included: [#98168.blend](https://archive.blender.org/developer/F13080850/T98168.blend)
Author

Added subscriber: @HaigPetrus

Added subscriber: @HaigPetrus
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. Tested in both 3.3 and 3.2, animation also get copied with strip in new scene.
I'm using the file attached below. Are you able to confirm same problem with it?
If not, please upload your .blend file.

  • Open file, create new scene
  • paste strip in new scene
    #98168.blend
Hi, thanks for the report. Tested in both 3.3 and 3.2, animation also get copied with strip in new scene. I'm using the file attached below. Are you able to confirm same problem with it? If not, please upload your .blend file. - Open file, create new scene - paste strip in new scene [#98168.blend](https://archive.blender.org/developer/F13080850/T98168.blend)
Author

It didn't work on my machines (plural). Made no sense that it would work with yours, so I did some digging into my settings and found that it works when the Interface: Copy Attributes add-on is disabled. I had it enabled. So, it's something to do with that, I think; not with Blender itself.

Might do something to bring up with its developers before the 3.2.0 launch. Do you refer it to them from here, or is there another place I can file the bug where they can see it?

It didn't work on my machines (plural). Made no sense that it would work with yours, so I did some digging into my settings and found that it works when the `Interface: Copy Attributes` add-on is disabled. I had it enabled. So, it's something to do with that, I think; not with Blender itself. Might do something to bring up with its developers before the 3.2.0 launch. Do you refer it to them from here, or is there another place I can file the bug where they can see it?
Member

Hi, thanks for investigating
Still can't reproduce with same add-on enabled (in same blender version as stated in task description).
Could you share your userpref.blend file?
video: F13086812

Hi, thanks for investigating Still can't reproduce with same add-on enabled (in same blender version as stated in task description). Could you share your userpref.blend file? video: [F13086812](https://archive.blender.org/developer/F13086812/Blender_2022-05-18_17-29-17.mp4)
Author

Of course, I can.

Here it is.userpref.blend

Of course, I can. Here it is.[userpref.blend](https://archive.blender.org/developer/F13086862/userpref.blend)
Author

It appears the problem persists on all of my machines (all 8 of them). It's a bit inconsistent on one, where disabling the Copy Attr add-on did the job, but not at all on the others.

Even with Copy Attr addon off, when copying a meta, the internal animations on the strips inside don't copy over. I've included a .blend for you to try out and see if it's consistent with you.strip_copy_issue.blend

It appears the problem persists on all of my machines (all 8 of them). It's a bit inconsistent on one, where disabling the Copy Attr add-on did the job, but not at all on the others. Even with Copy Attr addon off, when copying a meta, the internal animations on the strips inside don't copy over. I've included a .blend for you to try out and see if it's consistent with you.[strip_copy_issue.blend](https://archive.blender.org/developer/F13086950/strip_copy_issue.blend)
Member

tested with your preferences, still not able to reproduce.
Can you check with factory settings or have you already?: {nav File > Defaults > Load Factory Settings}
I'll ask other triagers to test if factory settings doesn't help

tested with your preferences, still not able to reproduce. Can you check with factory settings or have you already?: {nav File > Defaults > Load Factory Settings} I'll ask other triagers to test if factory settings doesn't help
Author

Just edited my previous post with an attachment. Hope it sheds some light. The videos are missing, but you only need to see the animation in the Opacity being copied over, or not.

I did do a factory reset. Still the same issue, unfortunately.

Just edited my previous post with an attachment. Hope it sheds some light. The videos are missing, but you only need to see the animation in the Opacity being copied over, or not. I did do a factory reset. Still the same issue, unfortunately.
Author

Please note: I tried your original .blend file. Copied your colour strip into a new scene and it worked. However, when I turned it into a meta, the animation inside DID NOT copy over. Please, verify.

EDIT:

I checked on other machines in the studio and, yes, it's consistently the Meta Strips whose contents' animation are not being copied over into new scenes. This appears the be the area that's buggy, at least in our studio.

Please note: I tried your original .blend file. Copied your colour strip into a new scene and it worked. However, when I turned it into a meta, the animation inside DID NOT copy over. Please, verify. EDIT: I checked on other machines in the studio and, yes, it's consistently the Meta Strips whose contents' animation are not being copied over into new scenes. This appears the be the area that's buggy, at least in our studio.
Pratik Borhade changed title from VSE strips do not copy animation over to another scene to VSE meta strips do not copy animation over to another scene 2022-05-18 17:27:45 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Yes, can confirm with meta strips.
I found a few reports which are probably related to this-
#71723 (VSE (2.81): Copy-pasted meta strips lose all key frames)
#68160 (Keyframes lost when copy-pasting strips)
I'm not sure if behavior is same since these reports (haven't tested myself on older builds).
@iss, Is this a known issue?

Yes, can confirm with meta strips. I found a few reports which are probably related to this- #71723 (VSE (2.81): Copy-pasted meta strips lose all key frames) #68160 (Keyframes lost when copy-pasting strips) I'm not sure if behavior is same since these reports (haven't tested myself on older builds). @iss, Is this a known issue?

In #98168#1360793, @PratikPB2123 wrote:
Yes, can confirm with meta strips.
I found a few reports which are probably related to this-
#71723 (VSE (2.81): Copy-pasted meta strips lose all key frames)
#68160 (Keyframes lost when copy-pasting strips)
I'm not sure if behavior is same since these reports (haven't tested myself on older builds).
@iss, Is this a known issue?

Not a known issue, I would treat this as a bug

> In #98168#1360793, @PratikPB2123 wrote: > Yes, can confirm with meta strips. > I found a few reports which are probably related to this- > #71723 (VSE (2.81): Copy-pasted meta strips lose all key frames) > #68160 (Keyframes lost when copy-pasting strips) > I'm not sure if behavior is same since these reports (haven't tested myself on older builds). > @iss, Is this a known issue? Not a known issue, I would treat this as a bug
Author

This is bug persists as of:

version: 3.2.0 Release Candidate, branch: master, commit date: 2022-06-06 16:10, hash: 128aa7f3b0, type: release

This is bug persists as of: version: 3.2.0 Release Candidate, branch: master, commit date: 2022-06-06 16:10, hash: 128aa7f3b098, type: release

This issue was referenced by a59fedb0bf

This issue was referenced by a59fedb0bf7eb9215eb864a3772d922be4780138

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-14 20:14:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98168
No description provided.