Fix T98168: Meta strips do not copy animation to another scene

Copy animation for strips that are inside metas.